added medicine data and prints table

--- a/app/views/medicines/new.html.erb
+++ b/app/views/medicines/new.html.erb
@@ -1,2 +1,8 @@
 <h1>Medicines</h1>
-<p>Find me in app/views/medicines/new.html.erb</p>
+<p>Medicine Table</p>
+<% @medicine.each do |med|%>
+<li><%= med.name%></li>
+<li><%= med.dosage%></li>
+<li><%= med.frequency%></li>
+<hr/>
+<%end%>
