added users and password

--- a/app/views/medicines/index.html.erb
+++ b/app/views/medicines/index.html.erb
@@ -6,6 +6,6 @@
 <li><%= med.frequency%></li>
 <li><%= med.id%></li>
 <!-- Delete function not working yet-->
-<%= link_to 'Delete',{ controller: 'medicines', action: 'destroy', id: med.id}, method: :delete , %>
+<%= link_to 'Delete',{ controller: 'medicines', action: 'destroy', id: med.id}, method: :delete%>
 <hr/>
 <%end%>
