--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,13 +75,13 @@
             Products
           </h6>
           <p>
-            <a href="#!" class="text-reset">Medicine</a>
+            <a href="http://localhost:3000/medicines" class="text-reset">Medicine(Account)</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Login</a>
+            <a href="http://localhost:3000/login" class="text-reset">Login</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Signup</a>
+            <a href="http://localhost:3000/signup" class="text-reset">Signup</a>
           </p>
           <p>
             <a href="#!" class="text-reset">About</a>
