--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,64 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <%= javascript_importmap_tags %>
   </head>
+<!--Nav-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="http://localhost:3000/login">MedDose</a>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="http://localhost:3000/login">Login<span class="sr-only"></span></a>
+      </li>
+
+      <%if current_user%>
+      <li class="nav-item">
+        <a class="nav-link" href="http://localhost:3000/logout">Logout</a>
+      </li>
+      <%else%>
+      <li class="nav-item">
+        <a class="nav-link" href="http://localhost:3000/logout">Login</a>
+      </li>
+      <%end%>
+
+      
+      <%if current_user%>
+      <li class="nav-item">
+        <a class="nav-link" href="http://localhost:3000/medicines">Medicine</a>
+      </li>
+      <%else%>
+      <li class="nav-item">
+        <a class="nav-link" href="http://localhost:3000/logout">Login</a>
+      </li>
+      <%end%>
+      <li class="nav-item">
+        <a class="nav-link" href="http://localhost:3000/signup">Signup</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#"></a>
+          <a class="dropdown-item" href="#"></a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#"></a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#"></a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+
 
   <body>
   <div class ="container">
