--- a/app/views/medicines/edit.html.erb
+++ b/app/views/medicines/edit.html.erb
@@ -1,5 +1,6 @@
 <h1>Update your medicine prescription </h1>
-<%= form_with url:"/medicines/#{med.id}", method: :patch do |form|%>
+
+<%= form_with url:"/medicines/#{@medicine.id}", method: :patch do |form|%>
 <div>
 <%=form.label :name%>
 <%=form.text_field :name%>
