--- a/app/views/medicines/index.html.erb
+++ b/app/views/medicines/index.html.erb
@@ -15,7 +15,7 @@
 <li><%= med.id%></li>
 
 <!--update button not working-->
-<%= link_to "Update","/medicines/#{med.id}", method: :patch, :action => 'update', data: { "turbo-method": :update }%>
+<%= link_to "edit","/medicines/#{med.id}/edit", method: :get, :action => 'edit', data: { "turbo-method": :edit }%>
 <!-- Delete function working-->
 <%= link_to 'Delete',"/medicines/#{med.id}", method: :delete, :action => 'destroy', data: { "turbo-method": :delete }%>
 <%# <%= button_to "delete", {:controller => :medicines, :action => 'destroy', :id => med.id }, :method => :delete %> 
