--- a/app/views/medicines/new.html.erb
+++ b/app/views/medicines/new.html.erb
@@ -1,6 +1,6 @@
-<h1>Create your medicine prescription </h1>
+<h1>Create your Medicine Prescription </h1>
 <%= form_with url:"/medicines/new", method: :post do |form|%>
-<div>
+<div><hr/>
 <%=form.label :name%>
 <%=form.text_field :name%>
 </div>
@@ -12,7 +12,7 @@
 <%=form.label :frequency%>
 <%=form.number_field :frequency%>
 </div>
-<%=form.submit "Submit"%>
+<%=form.submit "Save", class: "btn btn-primary"%>
 <%end%>
 
 <%= link_to "Back", :back%>
