--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,7 @@
   </head>
 <!--Nav-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="http://localhost:3000/login">MedDose</a>
-  <%= image_tag '/logo.jpg', width: '80em', height: '80em'%>
+  <a class="navbar-brand" href="http://localhost:3000/login"><%= image_tag '/logo2.png', width: '80em', height: '80em'%>MedDose</a>
   
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
