--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,19 +39,22 @@
   </div>
 </nav>
 
-
   <body>
-  <div class ="container" style="background-color: rgba(10, 0, 0, 0.05); height: auto;">
+  <div class ="page-container" style="background-color: rgba(10, 0, 0, 0.05); min-height: 100vh; position: relative;">
+   <div id="content-wrap" style="padding-bottom: 2.5rem;">
+   <div class ="container">
     <%= yield %>
+    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+   
     <!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted" >
+  <footer class="text-center text-lg-start bg-light text-muted" style= "position: absolute; Width: 100%; bottom: 0;" >
   <!-- Section: Social media -->
   <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
     <!-- Left -->
-    <div class="me-5 d-none d-lg-block" style="background-color: rgba(0, 0, 0, 0.05);">
+    <div class="me-5 d-none d-lg-block">
       <span></span>
     </div>
     <!-- Left -->
@@ -158,6 +161,7 @@
   </div>
   <!-- Copyright -->
 </footer>
+</div>
 <!-- Footer -->
   </body>
 </html>
