--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,8 +40,8 @@
 </nav>
 
   <body>
-  <div class ="page-container" style="background-color: rgba(10, 0, 0, 0.05); min-height: 100vh; position: relative;">
-   <div id="content-wrap" style="padding-bottom: 2.5rem;">
+  <div class ="page-container" style="min-height: 100vh; position: relative;">
+   <div id="content-wrap">
    <div class ="container">
     <%= yield %>
     </div>
@@ -50,7 +50,7 @@
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
    
     <!-- Footer -->
-  <footer class="text-center text-lg-start bg-light text-muted" style= "position: absolute; Width: 100%; bottom: 0;" >
+  <footer class="text-center text-lg-start bg-light text-muted" style= "position: absolute; width: 100%; bottom: 0; height: 0.2rem;" >
   <!-- Section: Social media -->
   <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
     <!-- Left -->
