--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,7 +76,7 @@
       <a href="" class="me-4 text-reset">
         <i class="fab fa-linkedin"></i>
       </a>
-      <a href="" class="me-4 text-reset">
+      <a href="https://www.github.com/jonhoa" class="me-4 text-reset">
         <i class="fab fa-github"></i>
       </a>
     </div>
@@ -105,13 +105,10 @@
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
-            Products
+            Links
           </h6>
           <p>
-            <a href="http://localhost:3000/medicines" class="text-reset">Medicine(Account)</a>
-          </p>
-          <p>
-            <a href="http://localhost:3000/login" class="text-reset">Login</a>
+            <a href="http://localhost:3000/medicines" class="text-reset">Home</a>
           </p>
           <p>
             <a href="http://localhost:3000/signup" class="text-reset">Signup</a>
@@ -122,25 +119,7 @@
         </div>
         <!-- Grid column -->
 
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" >
-          <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            Useful links
-          </h6>
-          <p>
-            <a href="#!" class="text-reset">Pricing</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Settings</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Orders</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Help</a>
-          </p>
-        </div>
+     
         <!-- Grid column -->
 
         <!-- Grid column -->
