--- a/app/views/medicines/edit.html.erb
+++ b/app/views/medicines/edit.html.erb
@@ -2,18 +2,17 @@
 <hr/>
 <%= form_with url:"/medicines/#{@medicine.id}", method: :patch do |form|%>
 <div>
-<%=form.label :name%>
+<%=form.label :name, nil, :style => "color: black; font-weight:bold;"%><br/>
 <%=form.text_field :name, value: @medicine.name%>
 </div>
 <div>
-<%=form.label :dosage%>
+<%=form.label :dosage, nil, :style => "color: black; font-weight:bold;"%><br/>
 <%=form.number_field :dosage, value: "#{@medicine.dosage}"%>
 </div>
 <div>
-<%=form.label :frequency%>
+<%=form.label :frequency, nil, :style => "color: black; font-weight:bold;"%><br/>
 <%=form.number_field :frequency, placeholder: "#{@medicine.frequency}", value: "#{@medicine.frequency}"%>
-</div>
-<%=form.submit "Save", class: "btn btn-primary"%>
+</div><br/>
+<%=form.submit "Save", class: "btn btn-primary"%>&nbsp;<%= link_to "Discard", :back%>
 <%end%>
 
-<%= link_to "Discard", :back%>
